# make-me-laugh

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  compile_flags.txt  main.c
.github/workflows/: build.yml
inc/: ball.h  entity.h  game.h  gamemath.h  global.h  intersection.h  player.h  player_input.h  rope.h  rope_unit.h
levels/: make-me-laugh.ldtk
res/: resources.h  resources.res
res/levels/: make-me-laugh.ldtk
res/levels/make-me-laugh/simplified/Level_0/: data.json
res/sound/: music.fur  music.vgm  music_dmf.dmf  vgmtest.vgm
src/: ball.c  entity.c  game.c  gamemath.c  intersection.c  main.c  player.c  player_input.c  rope.c  rope_unit.c
